--- a/NavigationDemo/Base.lproj/Main.storyboard
+++ b/NavigationDemo/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
             </objects>
             <point key="canvasLocation" x="1117" y="357"/>
         </scene>
-        <!--Item-->
+        <!--View Controller-->
         <scene sceneID="Cf3-bn-gQ1">
             <objects>
                 <viewController id="0yd-j6-k9N" sceneMemberID="viewController">
@@ -51,6 +51,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xxf-Qa-5qw">
                                 <rect key="frame" x="271" y="285" width="59" height="30"/>
                                 <state key="normal" title="Tab This"/>
+                                <connections>
+                                    <segue destination="eBH-7i-EMH" kind="show" id="Yot-Td-bxk"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -59,11 +62,41 @@
                             <constraint firstItem="Xxf-Qa-5qw" firstAttribute="centerX" secondItem="Bmx-6I-Ia4" secondAttribute="centerX" id="Vvs-Dx-iBa"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="GUj-fi-2RN"/>
+                    <navigationItem key="navigationItem" id="f5B-CB-yGs"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8yh-0P-6OB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1090" y="1172"/>
+            <point key="canvasLocation" x="1902" y="1172"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="a21-D8-Yh2">
+            <objects>
+                <viewController id="eBH-7i-EMH" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Vsk-X0-54a"/>
+                        <viewControllerLayoutGuide type="bottom" id="cdr-8d-tXR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Jhs-7a-L3J">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vi1-zw-6eq">
+                                <rect key="frame" x="264.5" y="289" width="71" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Vi1-zw-6eq" firstAttribute="centerY" secondItem="Jhs-7a-L3J" secondAttribute="centerY" id="PL4-rB-7Br"/>
+                            <constraint firstItem="Vi1-zw-6eq" firstAttribute="centerX" secondItem="Jhs-7a-L3J" secondAttribute="centerX" id="X1G-UE-N7c"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ocy-uW-xcU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2547" y="1172"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="BCK-vo-eYm">
@@ -76,12 +109,31 @@
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="lba-9D-Hto"/>
-                        <segue destination="0yd-j6-k9N" kind="relationship" relationship="viewControllers" id="rIp-ov-Cdj"/>
+                        <segue destination="dWC-T7-0hk" kind="relationship" relationship="viewControllers" id="rIp-ov-Cdj"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aA9-1q-Exp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="305" y="357"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="G3C-NV-dWw">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dWC-T7-0hk" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="GUj-fi-2RN"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="S6n-eD-OCF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0yd-j6-k9N" kind="relationship" relationship="rootViewController" id="ETb-Me-ZCY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fZj-z1-1CI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1090" y="1172"/>
         </scene>
     </scenes>
 </document>
