--- a/NavigationDemo/Base.lproj/Main.storyboard
+++ b/NavigationDemo/Base.lproj/Main.storyboard
@@ -36,10 +36,10 @@
             </objects>
             <point key="canvasLocation" x="1117" y="357"/>
         </scene>
-        <!--View Controller-->
+        <!--Message-->
         <scene sceneID="Cf3-bn-gQ1">
             <objects>
-                <viewController id="0yd-j6-k9N" sceneMemberID="viewController">
+                <viewController id="0yd-j6-k9N" customClass="SecondViewController" customModule="NavigationDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="z5s-5t-1Gm"/>
                         <viewControllerLayoutGuide type="bottom" id="In1-hB-hTy"/>
@@ -62,16 +62,18 @@
                             <constraint firstItem="Xxf-Qa-5qw" firstAttribute="centerX" secondItem="Bmx-6I-Ia4" secondAttribute="centerX" id="Vvs-Dx-iBa"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="f5B-CB-yGs"/>
+                    <navigationItem key="navigationItem" title="Message" id="f5B-CB-yGs">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="fCx-3y-Q0i"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8yh-0P-6OB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1902" y="1172"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="a21-D8-Yh2">
             <objects>
-                <viewController id="eBH-7i-EMH" sceneMemberID="viewController">
+                <viewController id="eBH-7i-EMH" customClass="DetailViewController" customModule="NavigationDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Vsk-X0-54a"/>
                         <viewControllerLayoutGuide type="bottom" id="cdr-8d-tXR"/>
